syntax = "proto3";

package pb;

import "user.proto";


option go_package = "paywise/pb";

message SignupRequest {
    string username  = 1;
    string email  = 2;
    string full_name = 3 ; 
    string password  =  4;
}



message SignupResponse {
    AuthResponse response = 1;
}